# vibeMaxer

./: .gitignore  CMakeLists.txt
main/: CMakeLists.txt  accel_task.c  accel_task.h  config.h  main.c  mic_task.c  mic_task.h  time_sync.c  time_sync.h  wifi.c  wifi.h
server/: accel.go  audio.go  db.go  go.mod  go.sum  main.go  ogg.go  schema.sql
softap/: CMakeLists.txt
softap/main/: CMakeLists.txt  main.c
tools/: plot_accel.py  to_wav.py
